--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,6 +29,8 @@ target 'myIWW' do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
 
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
   target 'myIWWTests' do
     inherit! :search_paths
     # Pods for testing
