--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
 		"format": "prettier --config ./.prettierrc --write \"**/*.{js,json,css,scss,vue,html}\""
 	},
 	"dependencies": {
+		"native-base": "^2.13.0",
 		"react": "16.8.6",
 		"react-native": "0.60.4",
 		"react-native-gesture-handler": "^1.3.0",
+		"react-native-reanimated": "^1.1.0",
 		"react-native-responsive-screen": "^1.2.2",
-		"react-navigation": "^3.11.1"
+		"react-navigation": "^3.11.1",
+		"react-navigation-switch-transitioner": "^0.1.1",
+		"react-navigation-transitions": "^1.0.11"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.5.5",
@@ -21,7 +25,7 @@
 		"@react-native-community/eslint-config": "^0.0.5",
 		"babel-eslint": "^10.0.2",
 		"babel-jest": "^24.8.0",
-		"eslint": "^5.3.0",
+		"eslint": "^5.16.0",
 		"eslint-config-airbnb": "^17.1.1",
 		"eslint-config-airbnb-base": "^13.2.0",
 		"eslint-plugin-import": "^2.18.2",
