--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"format": "prettier --config ./.prettierrc --write \"**/*.{js,json,css,scss,vue,html}\""
 	},
 	"dependencies": {
-		"native-base": "^2.13.0",
+		"native-base": "^2.13.4",
 		"react": "16.8.6",
 		"react-native": "0.60.4",
 		"react-native-gesture-handler": "^1.3.0",
@@ -17,7 +17,9 @@
 		"react-native-responsive-screen": "^1.2.2",
 		"react-navigation": "^3.11.1",
 		"react-navigation-switch-transitioner": "^0.1.1",
-		"react-navigation-transitions": "^1.0.11"
+		"react-navigation-transitions": "^1.0.11",
+		"react-redux": "^7.1.0",
+		"redux": "^4.0.4"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.5.5",
@@ -33,7 +35,8 @@
 		"eslint-plugin-react": "^7.14.3",
 		"jest": "^24.8.0",
 		"metro-react-native-babel-preset": "^0.55.0",
-		"react-test-renderer": "16.8.6"
+		"react-test-renderer": "16.8.6",
+		"redux-devtools": "^3.5.0"
 	},
 	"jest": {
 		"preset": "react-native"
