--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
 		"native-base": "^2.13.4",
 		"react": "16.8.6",
 		"react-native": "0.60.4",
+		"react-native-app-intro-slider": "^3.0.0",
+		"react-native-elements": "^1.1.0",
 		"react-native-gesture-handler": "^1.3.0",
+		"react-native-onboarding-swiper": "^1.1.0",
 		"react-native-reanimated": "^1.1.0",
 		"react-native-responsive-screen": "^1.2.2",
+		"react-native-vector-icons": "^6.6.0",
 		"react-navigation": "^3.11.1",
 		"react-navigation-switch-transitioner": "^0.1.1",
-		"react-navigation-transitions": "^1.0.11",
+		"react-navigation-transitions": "^1.0.12",
 		"react-redux": "^7.1.0",
 		"redux": "^4.0.4"
 	},
