--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react": "16.8.6",
 		"react-native": "0.60.4",
 		"react-native-app-intro-slider": "^3.0.0",
+		"react-native-easy-grid": "^0.2.1",
 		"react-native-elements": "^1.1.0",
 		"react-native-gesture-handler": "^1.3.0",
 		"react-native-onboarding-swiper": "^1.1.0",
