--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
 		"react-native-elements": "^1.1.0",
 		"react-native-gesture-handler": "^1.3.0",
 		"react-native-onboarding-swiper": "^1.1.0",
-		"react-native-reanimated": "^1.1.0",
+		"react-native-reanimated": "^1.2.0",
 		"react-native-responsive-screen": "^1.2.2",
 		"react-native-vector-icons": "^6.6.0",
 		"react-navigation": "^3.11.1",
 		"react-navigation-switch-transitioner": "^0.1.1",
 		"react-navigation-transitions": "^1.0.12",
 		"react-redux": "^7.1.0",
-		"redux": "^4.0.4"
+		"redux": "^4.0.4",
+		"validator": "^11.1.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.5.5",
