--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
 		"format": "prettier --config ./.prettierrc --write \"**/*.{js,json,css,scss,vue,html}\""
 	},
 	"dependencies": {
-		"native-base": "^2.13.4",
-		"react": "16.8.6",
-		"react-native": "0.60.4",
+		"native-base": "^2.13.5",
+		"react": "^16.9.0",
+		"react-native": "^0.60.5",
 		"react-native-app-intro-slider": "^3.0.0",
-		"react-native-easy-grid": "^0.2.1",
+		"react-native-easy-grid": "^0.2.2",
 		"react-native-elements": "^1.1.0",
-		"react-native-gesture-handler": "^1.3.0",
+		"react-native-gesture-handler": "^1.4.0",
 		"react-native-onboarding-swiper": "^1.1.0",
 		"react-native-reanimated": "^1.2.0",
 		"react-native-responsive-screen": "^1.2.2",
@@ -32,16 +32,16 @@
 		"@babel/runtime": "^7.5.5",
 		"@react-native-community/eslint-config": "^0.0.5",
 		"babel-eslint": "^10.0.2",
-		"babel-jest": "^24.8.0",
-		"eslint": "^5.16.0",
-		"eslint-config-airbnb": "^17.1.1",
-		"eslint-config-airbnb-base": "^13.2.0",
+		"babel-jest": "^24.9.0",
+		"eslint": "^6.2.1",
+		"eslint-config-airbnb": "^18.0.1",
+		"eslint-config-airbnb-base": "^14.0.0",
 		"eslint-plugin-import": "^2.18.2",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-react": "^7.14.3",
-		"jest": "^24.8.0",
-		"metro-react-native-babel-preset": "^0.55.0",
-		"react-test-renderer": "16.8.6",
+		"jest": "^24.9.0",
+		"metro-react-native-babel-preset": "^0.56.0",
+		"react-test-renderer": "^16.9.0",
 		"redux-devtools": "^3.5.0"
 	},
 	"jest": {
