--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-native-easy-grid": "^0.2.2",
 		"react-native-elements": "^1.1.0",
 		"react-native-gesture-handler": "^1.4.0",
+		"react-native-modal-dropdown-updated": "^0.6.3",
 		"react-native-onboarding-swiper": "^1.1.0",
 		"react-native-reanimated": "^1.2.0",
 		"react-native-responsive-screen": "^1.2.2",
