--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-native-responsive-screen": "^1.2.2",
 		"react-native-vector-icons": "^6.6.0",
 		"react-navigation": "^3.12.1",
+		"react-navigation-drawer": "^2.0.0",
 		"react-navigation-switch-transitioner": "^0.1.1",
 		"react-navigation-transitions": "^1.0.12",
 		"react-redux": "^7.1.1",
