--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
 		"format": "prettier --config ./.prettierrc --write \"**/*.{js,json,css,scss,vue,html}\""
 	},
 	"dependencies": {
-		"native-base": "^2.13.5",
+		"native-base": "^2.13.7",
 		"react": "^16.9.0",
 		"react-native": "^0.60.5",
 		"react-native-app-intro-slider": "^3.0.0",
 		"react-native-easy-grid": "^0.2.2",
-		"react-native-elements": "^1.1.0",
+		"react-native-elements": "^1.2.0",
 		"react-native-gesture-handler": "^1.4.1",
 		"react-native-modal-dropdown-updated": "^0.6.3",
 		"react-native-onboarding-swiper": "^1.1.0",
 		"react-native-reanimated": "^1.2.0",
+		"react-native-render-html": "^4.1.2",
 		"react-native-responsive-screen": "^1.2.2",
 		"react-native-vector-icons": "^6.6.0",
 		"react-navigation": "^3.12.1",
-		"react-navigation-drawer": "^2.0.0",
+		"react-navigation-drawer": "^2.1.0",
 		"react-navigation-switch-transitioner": "^0.1.1",
 		"react-navigation-transitions": "^1.0.12",
 		"react-redux": "^7.1.1",
@@ -35,7 +36,7 @@
 		"@react-native-community/eslint-config": "^0.0.5",
 		"babel-eslint": "^10.0.3",
 		"babel-jest": "^24.9.0",
-		"eslint": "^6.2.2",
+		"eslint": "^6.3.0",
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-airbnb-base": "^14.0.0",
 		"eslint-plugin-import": "^2.18.2",
