--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -188,6 +188,11 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-keychain')
+    implementation project(':@react-native-community_async-storage')
+    implementation project(':react-native-gesture-handler')
+    implementation project(':react-native-video')
+    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
