--- a/ios/Podfile
+++ b/ios/Podfile
@@ -33,6 +33,15 @@ target 'myIWW' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
+
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
+  pod 'RNKeychain', :path => '../node_modules/react-native-keychain'
+
   target 'myIWWTests' do
     inherit! :search_paths
     # Pods for testing
