--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"format": "prettier --config ./.prettierrc --write \"**/*.{js,json,css,scss,vue,html}\""
 	},
 	"dependencies": {
+		"@react-native-community/async-storage": "^1.6.1",
+		"axios": "^0.19.0",
 		"native-base": "^2.13.7",
 		"react": "^16.9.0",
 		"react-native": "^0.60.5",
@@ -16,18 +18,22 @@
 		"react-native-easy-grid": "^0.2.2",
 		"react-native-elements": "^1.2.0",
 		"react-native-gesture-handler": "^1.4.1",
+		"react-native-keychain": "^3.1.3",
 		"react-native-modal-dropdown-updated": "^0.6.3",
 		"react-native-onboarding-swiper": "^1.1.0",
 		"react-native-reanimated": "^1.2.0",
 		"react-native-render-html": "^4.1.2",
 		"react-native-responsive-screen": "^1.2.2",
 		"react-native-vector-icons": "^6.6.0",
-		"react-navigation": "^3.12.1",
+		"react-native-video": "^5.0.0",
+		"react-navigation": "^4.0.0",
 		"react-navigation-drawer": "^2.1.0",
+		"react-navigation-stack": "^1.5.1",
 		"react-navigation-switch-transitioner": "^0.1.1",
 		"react-navigation-transitions": "^1.0.12",
 		"react-redux": "^7.1.1",
 		"redux": "^4.0.4",
+		"redux-persist": "^6.0.0",
 		"validator": "^11.1.0"
 	},
 	"devDependencies": {
