--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
 		"react-native-responsive-screen": "^1.2.2",
 		"react-native-vector-icons": "^6.6.0",
 		"react-native-video": "^5.0.2",
-		"react-navigation": "^4.0.3",
-		"react-navigation-drawer": "^2.1.2",
-		"react-navigation-stack": "^1.5.5",
+		"react-navigation": "^4.0.4",
+		"react-navigation-drawer": "^2.2.0",
+		"react-navigation-stack": "^1.7.3",
 		"react-navigation-switch-transitioner": "^0.1.1",
 		"react-navigation-transitions": "^1.0.12",
 		"react-redux": "^7.1.1",
 		"redux": "^4.0.4",
 		"redux-persist": "^6.0.0",
+		"reselect": "^4.0.0",
 		"validator": "^11.1.0"
 	},
 	"devDependencies": {
