--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
 		"react-native-easy-grid": "^0.2.2",
 		"react-native-elements": "^1.2.0",
 		"react-native-gesture-handler": "^1.4.1",
-		"react-native-keychain": "^3.1.3",
+		"react-native-keychain": "^4.0.0",
 		"react-native-onboarding-swiper": "^1.1.0",
 		"react-native-reanimated": "^1.2.0",
 		"react-native-render-html": "^4.1.2",
 		"react-native-responsive-screen": "^1.2.2",
 		"react-native-vector-icons": "^6.6.0",
 		"react-native-video": "^5.0.2",
-		"react-navigation": "^4.0.4",
-		"react-navigation-drawer": "^2.2.0",
+		"react-native-webview": "^7.0.5",
+		"react-navigation": "^4.0.5",
+		"react-navigation-drawer": "^2.2.1",
 		"react-navigation-stack": "^1.7.3",
 		"react-navigation-switch-transitioner": "^0.1.1",
 		"react-navigation-transitions": "^1.0.12",
@@ -35,6 +36,7 @@
 		"redux": "^4.0.4",
 		"redux-persist": "^6.0.0",
 		"reselect": "^4.0.0",
+		"uuid": "^3.3.3",
 		"validator": "^11.1.0"
 	},
 	"devDependencies": {
@@ -43,7 +45,7 @@
 		"@react-native-community/eslint-config": "^0.0.5",
 		"babel-eslint": "^10.0.3",
 		"babel-jest": "^24.9.0",
-		"eslint": "^6.3.0",
+		"eslint": "^6.4.0",
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-airbnb-base": "^14.0.0",
 		"eslint-plugin-import": "^2.18.2",
@@ -52,7 +54,8 @@
 		"jest": "^24.9.0",
 		"metro-react-native-babel-preset": "^0.56.0",
 		"react-test-renderer": "^16.9.0",
-		"redux-devtools": "^3.5.0"
+		"redux-devtools": "^3.5.0",
+		"redux-logger": "^3.0.6"
 	},
 	"jest": {
 		"preset": "react-native"
