--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@react-native-community/async-storage": "^1.6.1",
 		"axios": "^0.19.0",
+		"dayjs": "^1.8.16",
 		"native-base": "^2.13.8",
 		"react": "^16.9.0",
 		"react-native": "^0.60.5",
@@ -26,10 +27,10 @@
 		"react-native-responsive-screen": "^1.2.2",
 		"react-native-vector-icons": "^6.6.0",
 		"react-native-video": "^5.0.2",
-		"react-native-webview": "^7.0.5",
-		"react-navigation": "^4.0.5",
+		"react-native-webview": "^7.0.7",
+		"react-navigation": "^4.0.6",
 		"react-navigation-drawer": "^2.2.1",
-		"react-navigation-stack": "^1.7.3",
+		"react-navigation-stack": "^1.8.0",
 		"react-navigation-switch-transitioner": "^0.1.1",
 		"react-navigation-transitions": "^1.0.12",
 		"react-redux": "^7.1.1",
