--- a/package.json
+++ b/package.json
@@ -1,64 +1,66 @@
 {
-	"name": "myIWW",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "react-native start",
-		"test": "jest",
-		"lint": "eslint .",
-		"format": "prettier --config ./.prettierrc --write \"**/*.{js,json,css,scss,vue,html}\""
-	},
-	"dependencies": {
-		"@react-native-community/async-storage": "^1.6.2",
-		"axios": "^0.19.0",
-		"dayjs": "^1.8.16",
-		"native-base": "^2.13.8",
-		"react": "^16.10.2",
-		"react-native": "^0.61.2",
-		"react-native-app-intro-slider": "^3.0.0",
-		"react-native-dropdown-menu": "^2.0.0",
-		"react-native-easy-grid": "^0.2.2",
-		"react-native-elements": "^1.2.6",
-		"react-native-gesture-handler": "^1.4.1",
-		"react-native-keychain": "^4.0.1",
-		"react-native-onboarding-swiper": "^1.1.0",
-		"react-native-reanimated": "^1.3.0",
-		"react-native-render-html": "^4.1.2",
-		"react-native-responsive-screen": "^1.3.0",
-		"react-native-vector-icons": "^6.6.0",
-		"react-native-video": "^5.0.2",
-		"react-native-webview": "^7.4.1",
-		"react-navigation": "^4.0.10",
-		"react-navigation-drawer": "^2.2.2",
-		"react-navigation-stack": "^1.9.4",
-		"react-navigation-switch-transitioner": "^0.1.1",
-		"react-navigation-transitions": "^1.0.12",
-		"react-redux": "^7.1.1",
-		"redux": "^4.0.4",
-		"redux-persist": "^6.0.0",
-		"reselect": "^4.0.0",
-		"uuid": "^3.3.3",
-		"validator": "^11.1.0"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.6.3",
-		"@babel/runtime": "^7.6.3",
-		"@react-native-community/eslint-config": "^0.0.5",
-		"babel-eslint": "^10.0.3",
-		"babel-jest": "^24.9.0",
-		"eslint": "^6.5.1",
-		"eslint-config-airbnb": "^18.0.1",
-		"eslint-config-airbnb-base": "^14.0.0",
-		"eslint-plugin-import": "^2.18.2",
-		"eslint-plugin-jsx-a11y": "^6.2.3",
-		"eslint-plugin-react": "^7.16.0",
-		"jest": "^24.9.0",
-		"metro-react-native-babel-preset": "^0.56.0",
-		"react-test-renderer": "^16.10.2",
-		"redux-devtools": "^3.5.0",
-		"redux-logger": "^3.0.6"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "myIWW",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint .",
+    "format": "prettier --config ./.prettierrc --write \"**/*.{js,json,css,scss,vue,html}\""
+  },
+  "dependencies": {
+    "@react-native-community/async-storage": "^1.6.2",
+    "axios": "^0.19.0",
+    "dayjs": "^1.8.16",
+    "native-base": "^2.13.8",
+    "react": "^16.10.2",
+    "react-native": "^0.61.2",
+    "react-native-app-intro-slider": "^3.0.0",
+    "react-native-dropdown-menu": "^2.0.0",
+    "react-native-easy-grid": "^0.2.2",
+    "react-native-elements": "^1.2.6",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-keychain": "^4.0.1",
+    "react-native-onboarding-swiper": "^1.1.0",
+    "react-native-reanimated": "^1.3.0",
+    "react-native-render-html": "^4.1.2",
+    "react-native-responsive-screen": "^1.3.0",
+    "react-native-swift": "^1.2.2",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-video": "^5.0.2",
+    "react-native-webview": "^7.4.2",
+    "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.2.2",
+    "react-navigation-stack": "^1.9.4",
+    "react-navigation-switch-transitioner": "^0.1.1",
+    "react-navigation-transitions": "^1.0.12",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
+    "reselect": "^4.0.0",
+    "uuid": "^3.3.3",
+    "validator": "^11.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/runtime": "^7.6.3",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.56.0",
+    "react-test-renderer": "^16.10.2",
+    "redux-devtools": "^3.5.0",
+    "redux-logger": "^3.0.6"
+  },
+  "jest": {
+    "preset": "react-native"
+  },
+  "isSwift": true
 }
