--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,4 @@
-platform :ios, '9.0'
+platform :ios, '10.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 target 'myIWW' do
@@ -49,6 +49,8 @@ pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVecto
 
   pod 'react-native-webview', :path => '../node_modules/react-native-webview'
 
+
+  pod 'react-native-track-player', :path => '../node_modules/react-native-track-player'
 
   target 'myIWWTests' do
     inherit! :search_paths
