--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-render-html": "^4.1.2",
     "react-native-responsive-screen": "^1.3.0",
     "react-native-swift": "^1.2.2",
+    "react-native-track-player": "1.1.8",
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^5.0.2",
     "react-native-webview": "^7.4.2",
