--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
+    "@react-native-community/slider": "2.0.2",
     "axios": "^0.19.0",
     "dayjs": "^1.8.16",
     "native-base": "^2.13.8",
