Adds article contents caching

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,7 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+MYAPP_UPLOAD_STORE_FILE=myIWW-alpha.keystore
+MYAPP_UPLOAD_KEY_ALIAS=myIWW-alpha
+MYAPP_UPLOAD_STORE_PASSWORD=iwwi8!!!
+MYAPP_UPLOAD_KEY_PASSWORD=iwwi8!!!
